--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,6 +8,8 @@
 
     <!-- application css -->
     <link href="app-content/app.css" rel="stylesheet" />
+    <link href="app-content/main.css" rel="stylesheet" />
+    
 </head>
 <body>
     <!-- main app container -->
@@ -25,13 +27,18 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-messages.min.js"></script>
     <script src="//unpkg.com/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.3.1/ui-bootstrap-tpls.js"></script>
 
     <!-- application scripts -->
     <script src="app.js"></script>
     <script src="app-services/authentication.service.js"></script>
+    <script src="app-services/car.service.js"></script>
     <script src="app-services/flash.service.js"></script>
+    <script src="app-services/modal.service.js"></script>
     <script src="home/home.controller.js"></script>
     <script src="login/login.controller.js"></script>
+    <script src="detail/view/carDetail.controller.js"></script>
+    <!-- <script src="detail/carDetail.state.js"></script> -->
 
 
 </body>
