--- a/src/main/webapp/home/home.view.html
+++ b/src/main/webapp/home/home.view.html
@@ -28,6 +28,7 @@
     
     </div>
     <p>&nbsp;</p>
+<p><a ng-click="vm.openAddCarDetailModal()" class="btn btn-primary">Add Car</a></p>    
 <p><a href="#!/login" class="btn btn-primary">Logout</a></p>
 
 </div>
