--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -38,7 +38,7 @@
     <script src="home/home.controller.js"></script>
     <script src="login/login.controller.js"></script>
     <script src="detail/view/carDetail.controller.js"></script>
-    <!-- <script src="detail/carDetail.state.js"></script> -->
+    <script src="detail/add/carAdd.controller.js"></script>
 
 
 </body>
