--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -39,6 +39,7 @@
     <script src="login/login.controller.js"></script>
     <script src="detail/view/carDetail.controller.js"></script>
     <script src="detail/add/carAdd.controller.js"></script>
+    <script src="detail/edit/carEdit.controller.js"></script>
 
 
 </body>
