--- a/src/main/webapp/detail/carDetail.html
+++ b/src/main/webapp/detail/carDetail.html
@@ -51,11 +51,18 @@
               <div class="col-sm-9">
                 <input 
                   ng-disabled="!vmDetail.editEnabled && !vmDetail.creationCar " 
+                  name="targa"
                   maxlength="20" 
                   type="text" 
                   ng-model="vmDetail.car.targa"
                   class="form-control input-sm"
+                  ng-required="true"
+                  ng-pattern="/^[a-zA-Z]{2}[0-9]{3,4}[a-zA-Z]{2}$/i"
                 >
+                <div ng-messages="editForm.targa.$error" ng-messages-multiple style="color:red">
+                  <div ng-message="required">This is required.</div>
+                  <div ng-message="pattern" class="error">Inserire una targa valida</div>
+                </div>
               </div>
             </div>
 
@@ -95,9 +102,15 @@
               <div class="col-sm-9">
                 <input
                   type="text"
+                  name="cf"
                   ng-model="vmDetail.car.codiceFiscale"
                   class="form-control input-sm"
-                  ng-disabled="!vmDetail.editEnabled"/>
+                  ng-disabled="!vmDetail.editEnabled"
+                  ng-pattern="/^[A-Za-z]{6}[0-9]{2}[A-Za-z]{1}[0-9]{2}[A-Za-z]{1}[0-9]{3}[A-Za-z]{1}$/i"
+                  />
+                <div ng-messages="editForm.cf.$error" ng-messages-multiple style="color:red">
+                  <div ng-message="pattern" class="error">Inserire un codice fiscale valido</div>
+                </div>
               </div>
             </div>
 
@@ -106,9 +119,15 @@
               <div class="col-sm-9">
                 <input
                   type="text"
+                  name="immatricolazione"
                   ng-model="vmDetail.car.immatricolazione"
                   class="form-control input-sm"
-                  ng-disabled="!vmDetail.editEnabled"/>
+                  ng-disabled="!vmDetail.editEnabled"
+                  ng-pattern="/^[0-9]{4}-[0-9]{2}-[0-9]{2}$/i"
+                  />
+                <div ng-messages="editForm.immatricolazione.$error" ng-messages-multiple style="color:red">
+                  <div ng-message="pattern" class="error">Inserire una data nel formato yyyy-MM-dd</div>
+                </div>  
               </div>
             </div>
 
