--- a/src/main/webapp/home/home.view.html
+++ b/src/main/webapp/home/home.view.html
@@ -1,5 +1,5 @@
 ﻿<h1>Hi {{vm.user}}!</h1>
-<p>You're logged in with JWT!!</p>
+<!-- <p>You're logged in with JWT!!</p> -->
 <h3>All registered cars:</h3>
 <div class="container">
     <div class="padding-top-16">
